[tool.poetry]
name = "aws-lambda-ec2-launch-checks"
version = "0.0.0"
description = "An AWS Lambda that will check Goss endpoint when triggered by ASG instance launch"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
maintainers = ["Team Telemetry"]
license = "Apache 2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
aws-lambda-powertools = "^1.26.0"
boto3 = "^1.24.3"
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
aws-lambda-context = "^1.1.0"
bandit = "^1.7.4"
black = "^22.6.0"
colorama = "^0.4.5"
flake8 = "^5.0.4"
moto = "^3.1.16"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
safety = "^2.1.1"
version-incrementor = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
