[tool.poetry]
name = "aws-lambda-ec2-launch-checks"
version = "0.0.0"
description = "An AWS Lambda that will check Goss endpoint when triggered by ASG instance launch"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
maintainers = ["Team Telemetry"]
license = "Apache 2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^2.0.0"
boto3 = "^1.24.96"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
aws-lambda-context = "^1.1.0"
bandit = "^1.7.4"
black = "^22.10.0"
colorama = "^0.4.5"
cookiecutter = "^2.1.1"
cruft = "^2.11.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"
version-incrementor = "^1.5.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
